--- a/index.html
+++ b/index.html
@@ -183,18 +183,15 @@
         var wizardSpeed = 3;
         var wizardWidth = 70;
         var getWizardHeight = function() {
-            var WizardHeight = 1.337 * wizardWidth;
-            return WizardHeight;
+            return 1.337 * wizardWidth;
         }
 
         var getWizardX = function(width) {
-            var WizardY = width / 2;
-            return WizardY;
+            return width / 2;
         }
 
         var getWizardY = function(height) {
-            var WizardX = (height / 3) * 2;
-            return WizardX;
+            return (height / 3) * 2;
         }
     </script>
     <script src="js/game.js"></script>
