--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Mono&subset=latin,cyrillic">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Код и Магия</title>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Mono&subset=latin,cyrillic" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <title>Код и Магия</title>
 </head>
 
 <body>
-
-    <header>
-        <svg style="display: none;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62
+  <header>
+    <svg style="display: none;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62
         86">
       <g id="wizard">
         <g id="wizard-coat">
@@ -46,60 +44,60 @@
         </g>
       </g>
     </svg>
-        <div class="header-clouds"></div>
-        <div class="header-fence"></div>
-        <div class="header-tree"></div>
+    <div class="header-clouds"></div>
+    <div class="header-fence"></div>
+    <div class="header-tree"></div>
 
-        <h1 class="header-title section-title">
-            Code&thinsp;and&thinsp;Magick
-            <img src="img/title-site.png" alt="Code and magick">
-        </h1>
-        <p class="header-description">
-            Это игра, где главного героя, которым вам предстоит управлять и изменять заклинаниями окружающий мир зовут Пендальф Синий. Вместе с ним вас ждет увлекательное приключение&hellip;
-        </p>
+    <h1 class="header-title section-title">
+      Code&thinsp;and&thinsp;Magick
+      <img src="img/title-site.png" alt="Code and magick" />
+    </h1>
+    <p class="header-description">
+      Это игра, где главного героя, которым вам предстоит управлять и изменять заклинаниями окружающий мир зовут
+      Пендальф Синий. Вместе с ним вас ждет увлекательное приключение&hellip;
+    </p>
 
-        <div class="demo"></div>
+    <div class="demo"></div>
 
-        <div class="setup-open">
-            <img src="./img/user-1.jpg" class="setup-open-icon">
-        </div>
-    </header>
+    <div class="setup-open">
+      <img src="./img/user-1.jpg" class="setup-open-icon" />
+    </div>
+  </header>
 
-    <div class="overlay setup hidden">
-        <form class="setup-wizard-form" method="post" enctype="multipart/form-data" autocomplete="off">
-
-            <div class="setup-title">
-                <div class="setup-user">
-                    <div class="upload">
-                        <img class="setup-user-pic" src="./img/user-1.jpg" />
-                        <input type="file" name="avatar">
-                    </div>
-                    <label>
+  <div class="overlay setup hidden">
+    <form class="setup-wizard-form" method="post" enctype="multipart/form-data" autocomplete="off">
+      <div class="setup-title">
+        <div class="setup-user">
+          <div class="upload">
+            <img class="setup-user-pic" src="./img/user-1.jpg" />
+            <input type="file" name="avatar" />
+          </div>
+          <label>
             <input type="text" name="username" maxlength="25" required class="setup-user-name" value="Синий Пендальф" />
           </label>
-                </div>
+        </div>
 
-                <span class="setup-close">&times;</span>
-            </div>
+        <span class="setup-close">&times;</span>
+      </div>
 
+      <div class="setup-artifacts-shop">
+        <div class="setup-artifacts-cell">
+          <img src="img/icon-star.png" alt="Star" width="65" height="50" draggable="true" />
+        </div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
 
-            <div class="setup-artifacts-shop">
-                <div class="setup-artifacts-cell"><img src="img/icon-star.png" alt="Star" width="65" height="50" draggable="true">
-                </div>
-                <div class="setup-artifacts-cell"></div>
-                <div class="setup-artifacts-cell"></div>
-                <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts-cell"></div>
+      </div>
 
-                <div class="setup-artifacts-cell"></div>
-                <div class="setup-artifacts-cell"></div>
-                <div class="setup-artifacts-cell"></div>
-                <div class="setup-artifacts-cell"></div>
-            </div>
-
-            <div class="setup-player">
-                <div class="setup-wizard-appearance">
-                    <div class="setup-wizard-wrap">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 86" class="setup-wizard">
+      <div class="setup-player">
+        <div class="setup-wizard-appearance">
+          <div class="setup-wizard-wrap">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 86" class="setup-wizard">
               <g class="wizard">
                 <use xlink:href="#wizard-coat" class="wizard-coat" style="fill: #6589a4"></use>
                 <use xlink:href="#wizard-head" class="wizard-head"></use>
@@ -107,60 +105,61 @@
                 <use xlink:href="#wizard-hands" class="wizard-hands"></use>
               </g>
             </svg>
-                    </div>
-                    <input type="hidden" name="coat-color" value="rgb(101, 137, 164)">
-                    <input type="hidden" name="eyes-color" value="black">
-                </div>
+          </div>
+          <input type="hidden" name="coat-color" value="rgb(101, 137, 164)" />
+          <input type="hidden" name="eyes-color" value="black" />
+        </div>
 
-                <div class="setup-fireball-wrap">
-                    <div class="setup-fireball"></div>
-                    <input type="hidden" name="fireball-color" value="#ee4830">
-                </div>
+        <div class="setup-fireball-wrap">
+          <div class="setup-fireball"></div>
+          <input type="hidden" name="fireball-color" value="#ee4830" />
+        </div>
 
-                <div class="setup-artifacts" dropzone="move">
-                    <div class="setup-artifacts-cell"></div>
-                    <div class="setup-artifacts-cell"></div>
-                    <div class="setup-artifacts-cell"></div>
-                    <div class="setup-artifacts-cell"></div>
+        <div class="setup-artifacts" dropzone="move">
+          <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
 
-                    <div class="setup-artifacts-cell"></div>
-                    <div class="setup-artifacts-cell"></div>
-                    <div class="setup-artifacts-cell"></div>
-                    <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
 
-                    <div class="setup-artifacts-cell"></div>
-                    <div class="setup-artifacts-cell"></div>
-                    <div class="setup-artifacts-cell"></div>
-                    <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
 
-                    <div class="setup-artifacts-cell"></div>
-                    <div class="setup-artifacts-cell"></div>
-                    <div class="setup-artifacts-cell"></div>
-                    <div class="setup-artifacts-cell"></div>
-                </div>
-            </div>
+          <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
+          <div class="setup-artifacts-cell"></div>
+        </div>
+      </div>
 
-            <div class="setup-footer">
-                <div class="setup-similar hidden">
+      <div class="setup-footer">
+        <div class="setup-similar hidden">
+          <h4 class="setup-similar-title">Похожие персонажи</h4>
 
-                    <h4 class="setup-similar-title">Похожие персонажи</h4>
+          <div class="setup-similar-list">
+            <!--Список похожих персонажей-->
+          </div>
+        </div>
 
-                    <div class="setup-similar-list">
-                        <!--Список похожих персонажей-->
-                    </div>
-                </div>
+        <button class="button setup-submit">Сохранить</button>
+      </div>
+    </form>
+  </div>
 
-                <button class="button setup-submit">Сохранить</button>
-            </div>
-        </form>
-    </div>
+  <footer>
+    <p>
+      <a href="http://htmlacademy.ru" class="footer-link"><img src="img/htmlacademy-logo.png" alt="HTML Academy"
+          width="130" />Сделано в HTML Academy</a>в 2017 году
+    </p>
+  </footer>
 
-    <footer>
-        <p>
-            <a href="http://htmlacademy.ru" class="footer-link"><img src="img/htmlacademy-logo.png" alt="HTML Academy" width="130">Сделано в HTML Academy</a>в 2017 году</p>
-    </footer>
-
-    <template id="similar-wizard-template" style="display: none">
+  <template id="similar-wizard-template" style="display: none">
     <div class="setup-similar-item">
       <div class="setup-similar-content">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62 86" class="setup-similar-wizard">
@@ -175,30 +174,27 @@
       <p class="setup-similar-label">Петр Петров</p>
     </div>
   </template>
-    <script>
-        var fireballSize = 22;
-        var getFireballSpeed = function(left) {
-            return left ? 5 : 2;
-        }
-        var wizardSpeed = 3;
-        var wizardWidth = 70;
-        var getWizardHeight = function() {
-            var WizardHeight = 1.337 * wizardWidth;
-            return WizardHeight;
-        }
+  <script>
+    var fireballSize = 22;
+    var getFireballSpeed = function (left) {
+      return left ? 5 : 2;
+    };
+    var wizardSpeed = 3;
+    var wizardWidth = 70;
+    var getWizardHeight = function () {
+      return 1.337 * wizardWidth;
+    };
 
-        var getWizardX = function(width) {
-            var WizardY = width / 2;
-            return WizardY;
-        }
+    var getWizardX = function (width) {
+      return width / 2;
+    };
 
-        var getWizardY = function(height) {
-            var WizardX = (height / 3) * 2;
-            return WizardX;
-        }
-    </script>
-    <script src="js/game.js"></script>
+    var getWizardY = function (height) {
+      return (height / 3) * 2;
+    };
 
+  </script>
+    <script src="js/stat.js"></script>
+  <script src="js/game.js"></script>
 </body>
-
 </html>
