--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Mono&subset=latin,cyrillic">
@@ -197,8 +196,7 @@
             return WizardX;
         }
     </script>
+    <script src="js/setup.js"></script>
     <script src="js/game.js"></script>
-
 </body>
-
 </html>
