--- a/index.html
+++ b/index.html
@@ -196,10 +196,11 @@
 
   </script>
   <script src="js/util.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/setup.js"></script>
   <script src="js/wizard.js"></script>
   <script src="js/dialog.js"></script>
-    <script src="js/stat.js"></script>
+  <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
 </body>
 </html>
