--- a/index.html
+++ b/index.html
@@ -203,5 +203,6 @@
   <script src="js/dialog.js"></script>
   <script src="js/stat.js"></script>
   <script src="js/game.js"></script>
+  <script src="js/upload.js"></script>
 </body>
 </html>
